--- a/cinema-app/pom.xml
+++ b/cinema-app/pom.xml
@@ -9,10 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+
     <artifactId>cinema-app</artifactId>
 
     <groupId>org-cinema</groupId>
     <packaging>war</packaging>
+
 
 
     <dependencies>
@@ -21,6 +23,15 @@
             <artifactId>cinema-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+
 
 </project>
