--- a/cinema-core/pom.xml
+++ b/cinema-core/pom.xml
@@ -11,7 +11,14 @@
 
     <artifactId>cinema-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
