--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <springframework.version>4.3.10.RELEASE</springframework.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     </properties>
 
 
