--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <springframework.version>4.3.10.RELEASE</springframework.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <jackson.version>2.8.9</jackson.version>
     </properties>
 
 
