--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <springframework.version>4.3.10.RELEASE</springframework.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jackson.version>2.8.9</jackson.version>
+        <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
     </properties>
 
 
