--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jackson.version>2.8.9</jackson.version>
         <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
+        <dozer.version>${dozer-spring.version}</dozer.version>
+        <dozer-spring.version>5.5.1</dozer-spring.version>
     </properties>
 
 
