--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,32 @@
         <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
         <dozer.version>${dozer-spring.version}</dozer.version>
         <dozer-spring.version>5.5.1</dozer-spring.version>
+        <log4j.version>2.8.2</log4j.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
     </properties>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
